--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,79 @@
 /*noinspection CssUnknownTarget*/
+
 @import url('https://fonts.googleapis.com/css?family=Lato|Raleway|Source+Sans+Pro');
 
-@font-face {
+/*@font-face {
 	font-family : 'script';
 	font-style  : normal;
 	src         : url('/css/script.eot');
 	src         : local('script'), url('/css/script.eot') format('embedded-opentype'), url('/css/script.woff') format('woff');
+}*/
+
+.raleway {
+    font-family: 'Raleway', sans-serif;
 }
 
-.raleway { font-family : 'Raleway', sans-serif; }
+.lato {
+    font-family: 'Lato', sans-serif;
+}
 
-.lato { font-family : 'Lato', sans-serif; }
+.src-sans-pro {
+    font-family: 'Source Sans Pro', sans-serif;
+}
 
-.src-sans-pro { font-family : 'Source Sans Pro', sans-serif; }
 
-.script { font-family : 'script', serif; }
+/*.script { font-family : 'script', serif; }*/
+
+.text-sm {
+    font-size: 5vw;
+}
+
+@media (min-width: 500px) and (max-width: 700px) {
+    .text-sm {
+        font-size: 4vw;
+    }
+}
+
+@media (min-width: 701px) and (max-width: 900px) {
+    .text-sm {
+        font-size: 3vw;
+    }
+}
+
+@media (min-width: 901px) {
+    .text-sm {
+        font-size: 2vw;
+    }
+}
+
 
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
 
 html {
-	color       : #222222;
-	font-size   : 1em;
-	line-height : 1.4;
+    color: #222222;
+    font-size: 1em;
+    line-height: 1.4;
 }
 
 ::-moz-selection {
-	background  : #b3d4fc;
-	text-shadow : none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 ::selection {
-	background  : #b3d4fc;
-	text-shadow : none;
+    background: #b3d4fc;
+    text-shadow: none;
 }
 
 hr {
-	display    : block;
-	height     : 1px;
-	border     : 0;
-	border-top : 1px solid #cccccc;
-	margin     : 1em 0;
-	padding    : 0;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #cccccc;
+    margin: 1em 0;
+    padding: 0;
 }
 
 audio,
@@ -51,29 +82,30 @@ iframe,
 img,
 svg,
 video {
-	vertical-align : middle;
+    vertical-align: middle;
 }
 
 fieldset {
-	border  : 0;
-	margin  : 0;
-	padding : 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
 
 textarea {
-	resize : vertical;
+    resize: vertical;
 }
 
 .browser-upgrade {
-	margin     : 0.2em 0;
-	background : #cccccc;
-	color      : #000000;
-	padding    : 0.2em 0;
+    margin: 0.2em 0;
+    background: #cccccc;
+    color: #000000;
+    padding: 0.2em 0;
 }
 
 .hidden {
-	display : none !important;
+    display: none !important;
 }
+
 
 /*
  * Hide only visually, but have it available for screen readers:
@@ -81,244 +113,273 @@ textarea {
  */
 
 .visually-hidden {
-	border   : 0;
-	clip     : rect(0 0 0 0);
-	height   : 1px;
-	margin   : -1px;
-	overflow : hidden;
-	padding  : 0;
-	position : absolute;
-	width    : 1px;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
 
 .visually-hidden.focusable:active,
 .visually-hidden.focusable:focus {
-	clip     : auto;
-	height   : auto;
-	margin   : 0;
-	overflow : visible;
-	position : static;
-	width    : auto;
+    clip: auto;
+    height: auto;
+    margin: 0;
+    overflow: visible;
+    position: static;
+    width: auto;
 }
 
 .invisible {
-	visibility : hidden;
+    visibility: hidden;
 }
 
 .clearfix:before,
 .clearfix:after {
-	content : " "; /* 1 */
-	display : table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
-	clear : both;
+    clear: both;
 }
 
-@media only screen and (min-width : 35em) {
-	/* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 35em) {
+    /* Style adjustments for viewports that meet the condition */
 }
 
 @media print,
-(-webkit-min-device-pixel-ratio : 1.25),
-(min-resolution : 1.25dppx),
-(min-resolution : 120dpi) {
-	/* Style adjustments for high resolution devices */
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
+    /* Style adjustments for high resolution devices */
 }
 
 @media print {
-	*,
-	*:before,
-	*:after,
-	*:first-letter,
-	*:first-line {
-		background  : transparent !important;
-		color       : #000000 !important; /* Black prints faster:
+    *,
+    *:before,
+    *:after,
+    *:first-letter,
+    *:first-line {
+        background: transparent !important;
+        color: #000000 !important;
+        /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
-		box-shadow  : none !important;
-		text-shadow : none !important;
-	}
-	
-	a,
-	a:visited {
-		text-decoration : underline;
-	}
-	
-	a[href]:after {
-		content : " (" attr(href) ")";
-	}
-	
-	abbr[title]:after {
-		content : " (" attr(title) ")";
-	}
-	
-	a[href^="#"]:after,
-	a[href^="javascript:"]:after {
-		content : "";
-	}
-	
-	pre,
-	blockquote {
-		border            : 1px solid #999999;
-		page-break-inside : avoid;
-	}
-	
-	thead {
-		display : table-header-group;
-	}
-	
-	tr,
-	img {
-		page-break-inside : avoid;
-	}
-	
-	img {
-		max-width : 100% !important;
-	}
-	
-	p,
-	h2,
-	h3 {
-		orphans : 3;
-		widows  : 3;
-	}
-	
-	h2,
-	h3 {
-		page-break-after : avoid;
-	}
+        box-shadow: none !important;
+        text-shadow: none !important;
+    }
+    a,
+    a:visited {
+        text-decoration: underline;
+    }
+    a[href]:after {
+        content: " (" attr(href) ")";
+    }
+    abbr[title]:after {
+        content: " (" attr(title) ")";
+    }
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+        content: "";
+    }
+    pre,
+    blockquote {
+        border: 1px solid #999999;
+        page-break-inside: avoid;
+    }
+    thead {
+        display: table-header-group;
+    }
+    tr,
+    img {
+        page-break-inside: avoid;
+    }
+    img {
+        max-width: 100% !important;
+    }
+    p,
+    h2,
+    h3 {
+        orphans: 3;
+        widows: 3;
+    }
+    h2,
+    h3 {
+        page-break-after: avoid;
+    }
 }
+
 
 /* Set height to 100% for body and html to enable the background image to cover the whole page: */
-body, html {
-	height : 100%
+
+body,
+html {
+    height: 100%
 }
 
-.d-block { display : block; }
+.d-block {
+    display: block;
+}
 
 .main {
-	height    : 100%;
-	/*color     : white;*/
-	font-size : 24px;
+    height: 100%;
+    /*color     : white;*/
+    font-size: 24px;
+}
+
+.navbar {
+    position: relative;
+    width: 100%;
+    min-height: 50px;
+    max-height: 100px;
+}
+
+.nav-left {
+    /*position: absolute;*/
+    float: left;
+    padding: 24px;
+}
+
+.nav-right {
+    /*position: absolute;*/
+    float: right;
+    padding: 24px;
 }
 
 .footer-text {
-	width     : 100%;
-	font-size : 1rem;
+    width: 100%;
+    font-size: 1rem;
 }
 
 .bg-img {
-	background      : url('/img/bg-emily-white-brick-2-windows-web.jpg') no-repeat center;
-	background-size : cover;
-	position        : relative;
+    background: url('/img/bg-emily-white-brick-2-windows-web.jpg') no-repeat center;
+    background-size: cover;
+    position: relative;
 }
 
 .dark-overlay {
-	position   : absolute;
-	top        : 0;
-	left       : 0;
-	height     : 100%;
-	width      : 100%;
-	background : rgba(0, 0, 0, .25);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, .25);
 }
 
 .top-left {
-	position : absolute;
-	top      : 24px;
-	left     : 24px;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+}
+
+.top-right {
+    position: absolute;
+    top: 24px;
+    right: 24px;
 }
 
 .bottom-left {
-	position : absolute;
-	bottom   : 0;
-	left     : 16px;
+    position: absolute;
+    bottom: 0;
+    left: 16px;
 }
 
+
 /* Position text in the middle */
+
 .middle {
-	position   : absolute;
-	top        : 50%;
-	left       : 50%;
-	transform  : translate(-50%, -50%);
-	text-align : center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .upper-third {
-	position   : absolute;
-	top        : 33%;
-	left       : 50%;
-	transform  : translate(-50%, -50%);
-	text-align : center;
+    position: absolute;
+    top: 33%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .lower-third {
-	position   : absolute;
-	top        : 66%;
-	left       : 50%;
-	transform  : translate(-50%, -50%);
-	text-align : center;
+    position: absolute;
+    top: 66%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
+
 /* Style the <hr> element */
+
 .hr {
-	margin : auto;
-	width  : 50%;
+    margin: auto;
+    width: 50%;
 }
 
 .coming-soon {
-	width      : 100%;
-	padding    : 0 2em;
-	position   : absolute;
-	top        : 25%;
-	left       : 50%;
-	transform  : translate(-50%, -50%);
-	text-align : center;
+    width: 100%;
+    padding: 0 2em;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .coming-soon h1 {
-	margin-bottom : .5em;
+    margin-bottom: .5em;
 }
 
 .logo {
-	height : 64px;
+    height: 64px;
 }
 
 .btn-sharp {
-	border-radius : 0;
+    border-radius: 0;
 }
 
 .btn-hollow {
-	background : none;
-	padding    : 12px 22px;
+    background: none;
+    padding: 12px 22px;
+}
+
+.well {
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
 }
 
 [data-email-me] {
-	font-size  : 16px;
-	min-height : 50px;
-	min-width  : 150px;
-	padding    : 12px;
+    font-size: 16px;
+    min-height: 50px;
+    min-width: 150px;
+    padding: 12px;
 }
 
-@media screen and (max-height : 700px) {
-	.logo {
-		height : 48px;
-	}
-	
-	.coming-soon {
-		top     : 40%;
-		padding : 0 1em;
-	}
-	
-	.bottom-left {
-		position : absolute;
-		bottom   : 1em;
-		left     : 0;
-		width    : 100%;
-		padding  : 0 1em;
-	}
-	
-	[data-email-me] {
-		display : block;
-		margin  : 0 auto;
-	}
+@media screen and (max-height: 700px) {
+    .logo {
+        height: 48px;
+    }
+    .coming-soon {
+        top: 40%;
+        padding: 0 1em;
+    }
+    .bottom-left {
+        position: absolute;
+        bottom: 1em;
+        left: 0;
+        width: 100%;
+        padding: 0 1em;
+    }
+    [data-email-me] {
+        display: block;
+        margin: 0 auto;
+    }
 }
